--- a/package.json
+++ b/package.json
@@ -3,17 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@raydium-io/raydium-sdk": "^1.1.0-beta.5",
+    "@solana/wallet-adapter-base": "^0.9.7",
+    "@solana/wallet-adapter-phantom": "^0.9.5",
+    "@solana/wallet-adapter-react": "^0.15.6",
+    "@solana/wallet-adapter-react-ui": "^0.9.8",
+    "@solana/web3.js": "^1.47.2",
+    "bn.js": "^5.2.1",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sass": "^1.53.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
